<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">

    <TextView
        android:id="@+id/showip"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="null"
        android:lines="2"
        android:textSize="22sp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <Button
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/loginbutton"
            android:text="@string/follow_status"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility ="gone"/>  <!-- 如果要显示出来，就改为visible -->
        <Button
            android:id="@+id/control"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/loginbutton"
            android:text="@string/follow_control"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility ="gone"/>
        <Button
            android:id="@+id/clear_coded_disc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/loginbutton"
            android:text="@string/clear_coded_disc"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility ="gone"/>
        </LinearLayout>

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:layout_weight="6" />
</LinearLayout>